[package]
name = "benchmark_tests"
version = "0.1.0"
authors = ["Seth Nielsen <sethmnielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easybench = "1.0.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false