[package]
name = "ekf_rust"
version = "0.1.0"
edition = "2018"
authors = ["Seth Nielsen <sethmnielsen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.3", features = ["blas", "rayon", "matrixmultiply-threading"] }
blas-src = { version = ">=0.2", default-features = false, features = ["openblas"] }
openblas-src = { version = ">=0.6", default-features = false, features = ["cblas", "system"] }

ndarray-stats = ">=0.3"
noisy_float = ">=0.1"
itertools = ">=0.8"
rand = ">=0.7"
